--- a/.gitignore
+++ b/.gitignore
@@ -130,6 +130,11 @@ ENV/
 env.bak/
 venv.bak/
 
+# Virtual environment in Python
+#   If you are working with Python, it is a good idea to include the virtual environment
+#   in your project and include the following directories in version control.
+myenv/
+
 # Spyder project settings
 .spyderproject
 .spyproject
